--- a/static/style.css
+++ b/static/style.css
@@ -20,13 +20,20 @@ main{
     background-color: hsl(0, 0%, 100%);
     height: 70%;
     width: 80%;
+    max-width: 300px;
     border-radius: 1rem;
     padding: 1rem;
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 #img{
     background-image: url("../images/image-qr-code.png");
-    border-radius: 1rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: .5rem;
+    height: 65%;
 }
 #heading{
     font-size: 1.2rem;
