--- a/static/style.css
+++ b/static/style.css
@@ -15,10 +15,12 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 main{
     background-color: hsl(0, 0%, 100%);
     height: 70%;
+    min-height: 250px;
     width: 80%;
     max-width: 300px;
     border-radius: 1rem;
@@ -26,6 +28,7 @@ main{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    box-shadow: 0 10px 25px 2px hsl(211, 15%, 72%);
 }
 #img{
     background-image: url("../images/image-qr-code.png");
@@ -48,5 +51,13 @@ main{
     text-align: center;
     padding: 0 1rem;
 }
-/* .attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); } */
+.attribution { 
+    position: absolute;
+    font-size: 11px; 
+    text-align: center; 
+    bottom: 2px;
+    padding: 1%;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
